[dx-compiler] Merge staging to main  (#29)
* docs: update RELEASE_NOTES.md

* compiler-20250807-rc1+manual.sha.8e42c32

* compiler-20250808-rc1+manual.sha.dd350b0

* compiler-20250811-rc2+manual.sha.a3fef0f

* compiler-20250818-rc0+manual.sha.4b12fa4

* compiler-20250819-rc1+manual.sha.e10b24c

* compiler-20250821-rc2+manual.sha.c5d8cb4

* compiler-20250821-rc2+manual.sha.82f2499

* Update RELEASE_NOTES.md (#26)

DX-Compiler v2.0.0 Release Notes Fixes (Version & Animated Cover)

* compiler-20250821-rc2+manual.sha.f86e703

* compiler-20250821-rc2+manual.sha.ac8715b

* fix: manual fix for auto release issue

* fix: manual fix for release automation error

---------

Co-authored-by: DX-CI <dci@deepx.ai>
Co-authored-by: SeungeunLee_DX <selee@deepx.ai>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,50 +52,14 @@ plugins:
   - with-pdf:
       author: DEEPX.ai
       copyright: ⓒ Copyright 2025 DEEPX All Rights Reserved.
-      #
-      #cover: false
       cover_title: DXNN Compiler (DX-COM) User Manual
-      cover_subtitle: 2025/05/18
+      cover_subtitle: August 2025 - Version 2.0.0
       cover_logo: img/deepx.png
       custom_template_path: docs/stylesheets
-      #back_cover: true
-      #
-      #toc_title: TOC TITLE TEXT
-      #heading_shift: false
-      #toc_level: 3
-      #ordered_chapter_level: 2
-      #excludes_children:
-      #    - 'release-notes/:upgrading'
-      #    - 'release-notes/:changelog'
-      #
-      #exclude_pages:
-      #    - 'bugs/'
-      #    - 'appendix/contribute/'
-      #convert_iframe:
-      #    - src: IFRAME SRC
-      #      img: POSTER IMAGE URL
-      #      text: ALTERNATE TEXT
-      #    - src: ...
-      #two_columns_level: 3
-      #
-      #render_js: true
-      #headless_chrome_path: headless-chromium
-      #
-      output_path: ../DEEPX_DX-COM_UM_250518.pdf
-      #enabled_if_env: ENABLE_PDF_EXPORT
-      #
-      #debug_html: true
-      #show_anchors: true
-      #verbose: true
-#  - mkdocs-video
+      output_path: ../DEEPX_DX-COM_UM_v2.0.0_2025_08.pdf
 extra:
-#  version:
-#    provider: mike
-#    default: stable
   generator: false
   social:
-#     - icon: fontawesome/brands/github
-#       link: https://github.com/deepx-ai
      - icon: fontawesome/brands/linkedin
        link: https://www.linkedin.com/company/deepx-corporation/
 #  alternate:
